Overflow hidden fix

--- a/css/mobiscroll.animation.css
+++ b/css/mobiscroll.animation.css
@@ -1,4 +1,5 @@
 .dw-trans .dw-persp {
+    overflow: hidden;
     perspective: 1000;
     -webkit-perspective: 1000;
     -moz-perspective: 1000;
