--- a/css/mobiscroll.core.css
+++ b/css/mobiscroll.core.css
@@ -36,7 +36,6 @@
     top: 0;
     left: 0;
     z-index: 1001;
-    overflow: hidden;
 }
 .dwo {
     background: #000;
